Final Edits on Notebook
Co-Authored-By: Nada-Ibrahim-Amer <73901405+Nada-Ibrahim-Amer@users.noreply.github.com>
Co-Authored-By: habibamohamdd12 <73903831+habibamohamdd12@users.noreply.github.com>

--- a/Lane_Detection_Pipeline.ipynb
+++ b/Lane_Detection_Pipeline.ipynb
@@ -137,7 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Line:\n",
+    "class Lane_line:\n",
     "    def __init__(self):\n",
     "        # was the line detected in the last iteration?\n",
     "        self.detected = False\n",
@@ -350,8 +350,8 @@
     "# latest frames number of good detection\n",
     "frame_num = 15\n",
     "\n",
-    "left = Line()\n",
-    "right = Line()"
+    "left = Lane_line()\n",
+    "right = Lane_line()"
    ]
   },
   {
@@ -449,18 +449,12 @@
    ],
    "source": [
     "def undistort(img, mtx, dist):\n",
-    "    \"\"\"\n",
-    "    Use cv2.undistort to undistort\n",
-    "    :param img: Assuming input img is RGB (imread by mpimg)\n",
-    "    :param mtx: camera calibration parameter\n",
-    "    :param dist: camera calibration parameter\n",
-    "    :return: Undistorted img\n",
-    "    \"\"\"\n",
     "    # transform to BGR to fit cv2.imread\n",
     "    img_BGR = cv2.cvtColor(img, cv2.COLOR_RGB2BGR)\n",
     "    dst_img = cv2.undistort(img_BGR, mtx, dist, None, mtx)\n",
     "\n",
     "    return cv2.cvtColor(dst_img, cv2.COLOR_BGR2RGB)\n",
+    "\n",
     "undist_img = undistort(o_img, mtx, dist)\n",
     "# Visualize Undistorted Image\n",
     "f, (ax1, ax2) = plt.subplots(1, 2, figsize=(20,10))\n",
@@ -511,15 +505,11 @@
    ],
    "source": [
     "def warp(img):\n",
-    "    \"\"\"\n",
-    "    Perspective Transformation\n",
-    "    :param img:\n",
-    "    :return: warped image\n",
-    "    \"\"\"\n",
     "\n",
     "    # Compute and apply perspective transform\n",
     "    M = cv2.getPerspectiveTransform(src, dst)\n",
-    "    warped = cv2.warpPerspective(img, M, (1280, 720), flags=cv2.INTER_NEAREST)  # keep same size as input image\n",
+    "    # keep same size as input image\n",
+    "    warped = cv2.warpPerspective(img, M, (1280, 720), flags=cv2.INTER_NEAREST)\n",
     "\n",
     "    return warped\n",
     "\n",
@@ -651,6 +641,7 @@
     "if right.detected is False:\n",
     "    rightx, righty, out_img_right = right.blind_sliding_window(nonzerox, nonzeroy, warped_binary)\n",
     "\n",
+    "\n",
     "out_combine = cv2.addWeighted(out_img_left, 1, out_img_right, 1, 0)\n",
     "\n",
     "# Visualize Filtered Image\n",
@@ -702,12 +693,7 @@
    ],
    "source": [
     "def car_pos(left_fit, right_fit):\n",
-    "    \"\"\"\n",
-    "    Calculate the position of car on left and right lane base (convert to real unit meter)\n",
-    "    :param left_fit:\n",
-    "    :param right_fit:\n",
-    "    :return: distance (meters) of car offset from the middle of left and right lane\n",
-    "    \"\"\"\n",
+    "\n",
     "    # Find lanes intersection with image bottom\n",
     "    xleft_eval = left_fit[0] * np.max(ploty) ** 2 + left_fit[1] * np.max(ploty) + left_fit[2]\n",
     "    xright_eval = right_fit[0] * np.max(ploty) ** 2 + right_fit[1] * np.max(ploty) + right_fit[2]\n",
@@ -746,8 +732,7 @@
     "\n",
     "    return offset, mean_curv\n",
     "\n",
-    "\n",
-    "def draw_area(undist, left_fitx, lefty, right_fitx, righty):\n",
+    "def draw(undist, left_fitx, lefty, right_fitx, righty):\n",
     "    Minv = cv2.getPerspectiveTransform(dst, src)\n",
     "\n",
     "    # Create an image to draw the lines on\n",
@@ -762,17 +747,27 @@
     "    pts = np.hstack((pts_left, pts_right))\n",
     "\n",
     "    # Draw lines\n",
+    "    '''\n",
+    "    isClosed: Flag indicating whether the drawn polylines are closed or not. \n",
+    "    If they are closed, the function draws a line from the last vertex of each curve to its first\n",
+    "    vertex.\n",
+    "    pts: Array of polygonal curves.\n",
+    "    '''\n",
+    "\n",
+    "    # Draw the outlines of the lane to fill it later with the green shape\n",
     "    cv2.polylines(color_warp, np.int_([pts]),\n",
     "                  isClosed=False, color=(255, 255, 0), thickness=30)\n",
     "\n",
-    "    # Draw the lane onto the warped blank image\n",
+    "    #   draw the green shape onto the warped image\n",
     "    cv2.fillPoly(color_warp, np.int_([pts]), (0, 150, 150))\n",
     "\n",
-    "    # Warp the blank back to original image space using inverse perspective matrix (Minv)\n",
-    "    newwarp = cv2.warpPerspective(color_warp, Minv, (img_shape[1], img_shape[0]))\n",
+    "    # Warp the image back to original image space using inverse perspective matrix (Minv)\n",
+    "    new_warped_image = cv2.warpPerspective(color_warp, Minv, (img_shape[1], img_shape[0]))\n",
     "\n",
     "    # Combine the result with the original image\n",
-    "    return cv2.addWeighted(undist, 1, newwarp, 0.5, 0)\n",
+    "    return cv2.addWeighted(undist, 1, new_warped_image, 0.5, 0)\n",
+    "\n",
+    "\n",
     "\n",
     "left.y = np.array(lefty).astype(np.float32)\n",
     "left.x = np.array(leftx).astype(np.float32)\n",
@@ -784,7 +779,8 @@
     "\n",
     "offset, mean_curv = car_pos(left_fit, right_fit)\n",
     "\n",
-    "result = draw_area(undist_img, left_fitx, left_fity, right_fitx, right_fity)\n",
+    "result = draw(undist_img, left_fitx, left_fity, right_fitx, right_fity)\n",
+    "\n",
     "font = cv2.FONT_HERSHEY_SIMPLEX\n",
     "text1 = 'Radius of Curvature: %d(m)'\n",
     "text2 = 'Offset from center: %.2f(m)'\n",
@@ -896,7 +892,7 @@
     "\n",
     "    offset, mean_curv = car_pos(left_fit, right_fit)\n",
     "\n",
-    "    result = draw_area(undist_img, left_fitx, left_fity, right_fitx, right_fity)\n",
+    "    result = draw(undist_img, left_fitx, left_fity, right_fitx, right_fity)\n",
     "\n",
     "    font = cv2.FONT_HERSHEY_SIMPLEX\n",
     "    text1 = 'Radius of Curvature: %d(m)'\n",
@@ -912,7 +908,7 @@
     "    cv2.putText(result, text2 % (-offset),\n",
     "                              (60, 130), font, 1.0, (255, 255, 255), thickness=2)\n",
     "\n",
-    "    if debug:\n",
+    "    if debug == True:\n",
     "        warped_binary_3D = np.dstack((warped_binary, warped_binary, warped_binary)) * 255\n",
     "        l_bin_3D = np.dstack((l_bin, l_bin, l_bin)) * 255\n",
     "        b_bin_3D = np.dstack((b_bin, b_bin, b_bin)) * 255\n",
